--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                    <div class="content-data">
 
 <h1 id="devdo">Devdo</h1>
-<p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 7.3.4.</p>
+<p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 8.0.2.</p>
+<h2 id="documentation">Documentation</h2>
+<p>The documentation for this project can be found <a href="https://ionut-t.github.io/devdo-documentation">here</a>.</p>
 <h2 id="development-server">Development server</h2>
 <p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
 <h2 id="code-scaffolding">Code scaffolding</h2>
