--- a/coverage.html
+++ b/coverage.html
@@ -75,16 +75,16 @@
                 <span class="coverage-count">(2/3)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./interfaces/AuthData.html">src/app/auth/auth-data.model.ts</a>
             </td>
             <td>interface</td>
             <td>AuthData</td>
-            <td align="right" data-sort="33">
-                <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(1/3)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="good">
