--- a/interfaces/AuthData.html
+++ b/interfaces/AuthData.html
@@ -86,6 +86,10 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
+                                            <span class="modifier">Optional</span>
+                                        <a href="#confirmPassword">confirmPassword</a>
+                                </li>
+                                <li>
                                         <a href="#email">email</a>
                                 </li>
                                 <li>
@@ -102,6 +106,40 @@
 
             <section>
                 <h3 id="inputs">Properties</h3>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="confirmPassword"></a>
+                                        <span class="name"><b>confirmPassword</b><a href="#confirmPassword"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>confirmPassword:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                        </tbody>
+                    </table>
                     <table class="table table-sm table-bordered">
                         <tbody>
                                 <tr>
@@ -168,6 +206,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface AuthData {
   email: string;
   password: string;
+  confirmPassword?: string;
 }
 </code></pre>
     </div>
