--- a/interceptors/ErrorInterceptor.html
+++ b/interceptors/ErrorInterceptor.html
@@ -285,6 +285,7 @@ export class ErrorInterceptor implements HttpInterceptor {
 
 
 
+                   
 
 
 
@@ -307,6 +308,7 @@ export class ErrorInterceptor implements HttpInterceptor {
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interceptor';
             var COMPODOC_CURRENT_PAGE_URL = 'ErrorInterceptor.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
