--- a/modules/AuthRoutingModule.html
+++ b/modules/AuthRoutingModule.html
@@ -98,6 +98,7 @@ export class AuthRoutingModule {}
 
 
 
+                   
 
 
 
@@ -120,6 +121,7 @@ export class AuthRoutingModule {}
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
             var COMPODOC_CURRENT_PAGE_URL = 'AuthRoutingModule.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
