--- a/modules/MaterialModule.html
+++ b/modules/MaterialModule.html
@@ -84,6 +84,8 @@ import { MatToolbarModule } from &#x27;@angular/material/toolbar&#x27;;
 import { MatProgressSpinnerModule } from &#x27;@angular/material/progress-spinner&#x27;;
 import { MatSnackBarModule } from &#x27;@angular/material/snack-bar&#x27;;
 import { MatTooltipModule } from &#x27;@angular/material/tooltip&#x27;;
+import { MatSlideToggleModule } from &#x27;@angular/material/slide-toggle&#x27;;
+import { MatCardModule } from &#x27;@angular/material/card&#x27;;
 
 @NgModule({
   exports: [
@@ -99,7 +101,9 @@ import { MatTooltipModule } from &#x27;@angular/material/tooltip&#x27;;
     MatInputModule,
     MatProgressSpinnerModule,
     MatSnackBarModule,
-    MatTooltipModule
+    MatTooltipModule,
+    MatSlideToggleModule,
+    MatCardModule
   ]
 })
 export class MaterialModule {}
@@ -116,6 +120,7 @@ export class MaterialModule {}
 
 
 
+                   
 
 
 
@@ -138,6 +143,7 @@ export class MaterialModule {}
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
             var COMPODOC_CURRENT_PAGE_URL = 'MaterialModule.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
