--- a/coverage.html
+++ b/coverage.html
@@ -43,6 +43,7 @@
 
 
 
+                   
 
 
 <ol class="breadcrumb">
@@ -73,18 +74,6 @@
             <td align="right" data-sort="66">
                 <span class="coverage-percent">66 %</span>
                 <span class="coverage-count">(2/3)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/AuthData.html">src/app/auth/auth-data.model.ts</a>
-            </td>
-            <td>interface</td>
-            <td>AuthData</td>
-            <td align="right" data-sort="25">
-                <span class="coverage-percent">25 %</span>
-                <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
         <tr class="good">
@@ -126,10 +115,10 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#BACKEND_URL">src/app/auth/auth.service.ts</a>
+                <a href="./miscellaneous/variables.html#API_URL">src/app/auth/auth.service.ts</a>
             </td>
             <td>variable</td>
-            <td>BACKEND_URL</td>
+            <td>API_URL</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(1/1)</span>
@@ -166,9 +155,21 @@
             </td>
             <td>component</td>
             <td>SignupComponent</td>
-            <td align="right" data-sort="42">
-                <span class="coverage-percent">42 %</span>
-                <span class="coverage-count">(6/14)</span>
+            <td align="right" data-sort="46">
+                <span class="coverage-percent">46 %</span>
+                <span class="coverage-count">(7/15)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/User.html">src/app/auth/user.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>User</td>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -183,100 +184,76 @@
                 <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/BoardService.html">src/app/board/board.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>BoardService</td>
-            <td align="right" data-sort="69">
-                <span class="coverage-percent">69 %</span>
-                <span class="coverage-count">(18/26)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#BACKEND_URL">src/app/board/board.service.ts</a>
-            </td>
-            <td>variable</td>
-            <td>BACKEND_URL</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/DoingComponent.html">src/app/board/doing/doing.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>DoingComponent</td>
-            <td align="right" data-sort="54">
-                <span class="coverage-percent">54 %</span>
-                <span class="coverage-count">(6/11)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/DoneComponent.html">src/app/board/done/done.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>DoneComponent</td>
-            <td align="right" data-sort="40">
-                <span class="coverage-percent">40 %</span>
-                <span class="coverage-count">(4/10)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/EditTaskComponent.html">src/app/board/edit-task/edit-task.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>EditTaskComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(4/8)</span>
-            </td>
-        </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./interfaces/Task.html">src/app/board/task.model.ts</a>
+                <a href="./interfaces/ITask.html">src/app/board/task.model.ts</a>
             </td>
             <td>interface</td>
-            <td>Task</td>
-            <td align="right" data-sort="25">
-                <span class="coverage-percent">25 %</span>
-                <span class="coverage-count">(1/4)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/CreateTaskComponent.html">src/app/board/todo/create-task/create-task.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>CreateTaskComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(3/6)</span>
+            <td>ITask</td>
+            <td align="right" data-sort="16">
+                <span class="coverage-percent">16 %</span>
+                <span class="coverage-count">(1/6)</span>
             </td>
         </tr>
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/TodoComponent.html">src/app/board/todo/todo.component.ts</a>
+                <a href="./injectables/TaskService.html">src/app/board/task.service.ts</a>
             </td>
-            <td>component</td>
-            <td>TodoComponent</td>
+            <td>injectable</td>
+            <td>TaskService</td>
             <td align="right" data-sort="53">
                 <span class="coverage-percent">53 %</span>
-                <span class="coverage-count">(7/13)</span>
+                <span class="coverage-count">(8/15)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/CreateTaskComponent.html">src/app/board/tasks/create-task/create-task.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>CreateTaskComponent</td>
+            <td align="right" data-sort="60">
+                <span class="coverage-percent">60 %</span>
+                <span class="coverage-count">(3/5)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/EditTaskComponent.html">src/app/board/tasks/edit-task/edit-task.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>EditTaskComponent</td>
+            <td align="right" data-sort="55">
+                <span class="coverage-percent">55 %</span>
+                <span class="coverage-count">(5/9)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TasksCardListComponent.html">src/app/board/tasks/tasks-card-list/tasks-card-list.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TasksCardListComponent</td>
+            <td align="right" data-sort="30">
+                <span class="coverage-percent">30 %</span>
+                <span class="coverage-count">(4/13)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TasksComponent.html">src/app/board/tasks/tasks.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TasksComponent</td>
+            <td align="right" data-sort="37">
+                <span class="coverage-percent">37 %</span>
+                <span class="coverage-count">(6/16)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -310,9 +287,9 @@
             </td>
             <td>component</td>
             <td>NavigationComponent</td>
-            <td align="right" data-sort="30">
-                <span class="coverage-percent">30 %</span>
-                <span class="coverage-count">(3/10)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(4/12)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -402,6 +379,7 @@
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'coverage';
             var COMPODOC_CURRENT_PAGE_URL = 'coverage.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="./js/libs/custom-elements.min.js"></script>
