--- a/dependencies.html
+++ b/dependencies.html
@@ -48,37 +48,38 @@
     </ol>
     <ul class="dependencies-list">
         <li>
-            <b>@angular/animations</b> : ~8.0.0</li>
+            <b>@angular/animations</b> : ^8.2.14</li>
         <li>
-            <b>@angular/cdk</b> : ~8.0.0</li>
+            <b>@angular/cdk</b> : ^8.0.2</li>
         <li>
-            <b>@angular/common</b> : ~8.0.0</li>
+            <b>@angular/common</b> : ^8.2.14</li>
         <li>
-            <b>@angular/compiler</b> : ~8.0.0</li>
+            <b>@angular/compiler</b> : ^8.2.14</li>
         <li>
-            <b>@angular/core</b> : ~8.0.0</li>
+            <b>@angular/core</b> : ^8.2.14</li>
         <li>
-            <b>@angular/forms</b> : ~8.0.0</li>
+            <b>@angular/forms</b> : ^8.2.14</li>
         <li>
-            <b>@angular/material</b> : ^8.0.0</li>
+            <b>@angular/material</b> : ^8.2.3</li>
         <li>
-            <b>@angular/platform-browser</b> : ~8.0.0</li>
+            <b>@angular/platform-browser</b> : ^8.2.14</li>
         <li>
-            <b>@angular/platform-browser-dynamic</b> : ~8.0.0</li>
+            <b>@angular/platform-browser-dynamic</b> : ^8.2.14</li>
         <li>
-            <b>@angular/router</b> : ~8.0.0</li>
+            <b>@angular/router</b> : ^8.2.14</li>
         <li>
-            <b>core-js</b> : ^2.5.4</li>
+            <b>core-js</b> : ^2.6.10</li>
         <li>
             <b>hammerjs</b> : ^2.0.8</li>
         <li>
-            <b>rxjs</b> : ~6.5.2</li>
+            <b>rxjs</b> : ^6.5.3</li>
         <li>
-            <b>tslib</b> : ^1.9.0</li>
+            <b>tslib</b> : ^1.10.0</li>
         <li>
             <b>zone.js</b> : ~0.9.1</li>
     </ul>
 
+                   
 
 
 
@@ -101,6 +102,7 @@
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'package-dependencies';
             var COMPODOC_CURRENT_PAGE_URL = 'dependencies.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="./js/libs/custom-elements.min.js"></script>
