--- a/guards/AuthGuard.html
+++ b/guards/AuthGuard.html
@@ -278,6 +278,7 @@ export class AuthGuard implements CanLoad {
 
 
 
+                   
 
 
 
@@ -300,6 +301,7 @@ export class AuthGuard implements CanLoad {
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'guard';
             var COMPODOC_CURRENT_PAGE_URL = 'AuthGuard.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
