--- a/injectables/UIService.html
+++ b/injectables/UIService.html
@@ -355,6 +355,7 @@ export class UIService {
 
 
 
+                   
 
 
 
@@ -377,6 +378,7 @@ export class UIService {
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'injectable';
             var COMPODOC_CURRENT_PAGE_URL = 'UIService.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
