--- a/interceptors/AuthInterceptor.html
+++ b/interceptors/AuthInterceptor.html
@@ -276,6 +276,7 @@ export class AuthInterceptor implements HttpInterceptor {
 
 
 
+                   
 
 
 
@@ -298,6 +299,7 @@ export class AuthInterceptor implements HttpInterceptor {
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interceptor';
             var COMPODOC_CURRENT_PAGE_URL = 'AuthInterceptor.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
