--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -27,7 +27,7 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content miscellaneous-functions">
+               <div class="content miscellaneous-typealiases">
                    <div class="content-data">
 
 
@@ -47,7 +47,7 @@
 
 <ol class="breadcrumb">
   <li>Miscellaneous</li>
-  <li>Functions</li>
+  <li>Type aliases</li>
 </ol>
 
 <section>
@@ -58,7 +58,10 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
-                            <a href="#MustMatch" title="src/app/auth/signup/must-match.validator.ts"><b>MustMatch</b>&nbsp;&nbsp;&nbsp;(src/.../must-match.validator.ts)</a>
+                            <a href="#TaskArrayResponseType" title="src/app/board/task.service.ts"><b>TaskArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#TaskResponseType" title="src/app/board/task.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task.service.ts)</a>
                         </li>
                     </ul>
                 </td>
@@ -67,70 +70,36 @@
     </table>
 </section>
 
-    <h3>src/app/auth/signup/must-match.validator.ts</h3>
+    <h3>src/app/board/task.service.ts</h3>
     <section>
-    <h3></h3>    <table class="table table-sm table-bordered">
+    <table class="table table-sm table-bordered">
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="MustMatch"></a>
-                    <span class="name">
-                        <b>
-                            MustMatch
-                        </b>
-                        <a href="#MustMatch"><span class="icon ion-ios-link"></span></a>
-                    </span>
+                    <a name="TaskArrayResponseType"></a>
+                    <span class="name"><b>TaskArrayResponseType</b><a href="#TaskArrayResponseType"><span class="icon ion-ios-link"></span></a></span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>MustMatch(controlName, matchingControlName)</code>
+                    <code>    <code>HttpResponse&lt;literal type&gt;</code>
+</code>
                 </td>
             </tr>
-
-
-
-
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Custom validator to check that two fields match.
-Return if another validator has already found an error on the matchingControl.
-Set error on matchingControl if validation fails.</p>
-</div>
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>controlName</td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                                <tr>
-                                    <td>matchingControlName</td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                    </div>
+                    <a name="TaskResponseType"></a>
+                    <span class="name"><b>TaskResponseType</b><a href="#TaskResponseType"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <code>    <code>HttpResponse&lt;literal type&gt;</code>
+</code>
                 </td>
             </tr>
         </tbody>
@@ -154,8 +123,8 @@ Set error on matchingControl if validation fails.</p>
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'miscellaneous-functions';
-            var COMPODOC_CURRENT_PAGE_URL = 'functions.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'miscellaneous-typealiases';
+            var COMPODOC_CURRENT_PAGE_URL = 'typealiases.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
