--- a/modules/CoreModule.html
+++ b/modules/CoreModule.html
@@ -266,6 +266,7 @@ export class CoreModule {}
 
 
 
+                   
 
 
 
@@ -288,6 +289,7 @@ export class CoreModule {}
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
             var COMPODOC_CURRENT_PAGE_URL = 'CoreModule.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
