--- a/routes.html
+++ b/routes.html
@@ -48,12 +48,12 @@
 
 <div id="body-routes"></div>
 
-<script src="js/libs/d3.v3.min.js"></script>
-<script src="js/libs/innersvg.js"></script>
+<script src="./js/libs/d3.v3.min.js"></script>
+<script src="./js/libs/innersvg.js"></script>
 
-<script src="js/routes/routes_index.js"></script>
-<script src="js/routes.js"></script>
-
+<script src="./js/routes/routes_index.js"></script>
+<script src="./js/routes.js"></script>
+                   
 
 
 
@@ -76,6 +76,7 @@
             var COMPODOC_CURRENT_PAGE_DEPTH = 0;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'routes';
             var COMPODOC_CURRENT_PAGE_URL = 'routes.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="./js/libs/custom-elements.min.js"></script>
