--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -58,10 +58,10 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
-                            <a href="#TaskArrayResponseType" title="src/app/board/task.service.ts"><b>TaskArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task.service.ts)</a>
+                            <a href="#TaskArrayResponseType" title="src/app/board/tasks/task-http.service.ts"><b>TaskArrayResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
                         </li>
                         <li>
-                            <a href="#TaskResponseType" title="src/app/board/task.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task.service.ts)</a>
+                            <a href="#TaskResponseType" title="src/app/board/tasks/task-http.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
                         </li>
                     </ul>
                 </td>
@@ -70,7 +70,7 @@
     </table>
 </section>
 
-    <h3>src/app/board/task.service.ts</h3>
+    <h3>src/app/board/tasks/task-http.service.ts</h3>
     <section>
     <table class="table table-sm table-bordered">
         <tbody>
