--- a/modules/MaterialModule.html
+++ b/modules/MaterialModule.html
@@ -86,6 +86,7 @@ import { MatSnackBarModule } from &#x27;@angular/material/snack-bar&#x27;;
 import { MatTooltipModule } from &#x27;@angular/material/tooltip&#x27;;
 import { MatSlideToggleModule } from &#x27;@angular/material/slide-toggle&#x27;;
 import { MatCardModule } from &#x27;@angular/material/card&#x27;;
+import { MatDialogModule } from &#x27;@angular/material/dialog&#x27;;
 
 @NgModule({
   exports: [
@@ -103,7 +104,8 @@ import { MatCardModule } from &#x27;@angular/material/card&#x27;;
     MatSnackBarModule,
     MatTooltipModule,
     MatSlideToggleModule,
-    MatCardModule
+    MatCardModule,
+    MatDialogModule
   ]
 })
 export class MaterialModule {}
