--- a/coverage.html
+++ b/coverage.html
@@ -184,52 +184,52 @@
                 <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/ITask.html">src/app/board/task.model.ts</a>
-            </td>
-            <td>interface</td>
-            <td>ITask</td>
-            <td align="right" data-sort="16">
-                <span class="coverage-percent">16 %</span>
-                <span class="coverage-count">(1/6)</span>
-            </td>
-        </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/TaskService.html">src/app/board/task.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>TaskService</td>
-            <td align="right" data-sort="53">
-                <span class="coverage-percent">53 %</span>
-                <span class="coverage-count">(8/15)</span>
-            </td>
-        </tr>
-        <tr class="good">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/CreateTaskComponent.html">src/app/board/tasks/create-task/create-task.component.ts</a>
             </td>
             <td>component</td>
             <td>CreateTaskComponent</td>
-            <td align="right" data-sort="60">
-                <span class="coverage-percent">60 %</span>
-                <span class="coverage-count">(3/5)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(7/14)</span>
             </td>
         </tr>
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/EditTaskComponent.html">src/app/board/tasks/edit-task/edit-task.component.ts</a>
+                <a href="./injectables/TaskHttpService.html">src/app/board/tasks/task-http.service.ts</a>
             </td>
-            <td>component</td>
-            <td>EditTaskComponent</td>
-            <td align="right" data-sort="55">
-                <span class="coverage-percent">55 %</span>
-                <span class="coverage-count">(5/9)</span>
+            <td>injectable</td>
+            <td>TaskHttpService</td>
+            <td align="right" data-sort="62">
+                <span class="coverage-percent">62 %</span>
+                <span class="coverage-count">(5/8)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/TaskStateService.html">src/app/board/tasks/task-state.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>TaskStateService</td>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(4/12)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/ITask.html">src/app/board/tasks/task.model.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ITask</td>
+            <td align="right" data-sort="16">
+                <span class="coverage-percent">16 %</span>
+                <span class="coverage-count">(1/6)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -239,9 +239,9 @@
             </td>
             <td>component</td>
             <td>TasksCardListComponent</td>
-            <td align="right" data-sort="30">
-                <span class="coverage-percent">30 %</span>
-                <span class="coverage-count">(4/13)</span>
+            <td align="right" data-sort="27">
+                <span class="coverage-percent">27 %</span>
+                <span class="coverage-count">(5/18)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -251,9 +251,9 @@
             </td>
             <td>component</td>
             <td>TasksComponent</td>
-            <td align="right" data-sort="37">
-                <span class="coverage-percent">37 %</span>
-                <span class="coverage-count">(6/16)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(5/15)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -266,6 +266,30 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/DialogComponent.html">src/app/components/dialog/dialog.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>DialogComponent</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/DialogData.html">src/app/components/dialog/dialog.component.ts</a>
+            </td>
+            <td>interface</td>
+            <td>DialogData</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -283,13 +307,25 @@
         <tr class="medium">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/NavigationComponent.html">src/app/core/navigation/navigation.component.ts</a>
+                <a href="./components/SidenavComponent.html">src/app/core/navigation/sidenav/sidenav.component.ts</a>
             </td>
             <td>component</td>
-            <td>NavigationComponent</td>
+            <td>SidenavComponent</td>
             <td align="right" data-sort="33">
                 <span class="coverage-percent">33 %</span>
-                <span class="coverage-count">(4/12)</span>
+                <span class="coverage-count">(3/9)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/TopnavComponent.html">src/app/core/navigation/topnav/topnav.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>TopnavComponent</td>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(4/10)</span>
             </td>
         </tr>
         <tr class="medium">
