--- a/modules.html
+++ b/modules.html
@@ -153,6 +153,23 @@
             <div class="col-sm-4">
                 <div class="card card-module">
                     <div class="card-header">
+                        <h4 class="card-title">DialogModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/DialogModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/DialogModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
                         <h4 class="card-title">MaterialModule</h4>
                     </div>
                     <div class="card-block">
@@ -161,6 +178,23 @@
                                 </p>
                         <footer class="text-center">
                             <a href="./modules/MaterialModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
+                        <h4 class="card-title">NavigationModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/NavigationModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/NavigationModule.html" class="btn btn-default">Browse</a>
                         </footer>
                     </div>
                 </div>
