--- a/modules/BoardRoutingModule.html
+++ b/modules/BoardRoutingModule.html
@@ -73,15 +73,8 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { NgModule } from &#x27;@angular/core&#x27;;
 import { Routes, RouterModule } from &#x27;@angular/router&#x27;;
 import { BoardComponent } from &#x27;./board.component&#x27;;
-import { EditTaskComponent } from &#x27;./tasks/edit-task/edit-task.component&#x27;;
 
-const routes: Routes &#x3D; [
-  {
-    path: &#x27;&#x27;,
-    component: BoardComponent
-  },
-  { path: &#x27;tasks/edit/:taskId&#x27;, component: EditTaskComponent }
-];
+const routes: Routes &#x3D; [{ path: &#x27;&#x27;, component: BoardComponent }];
 
 @NgModule({
   imports: [RouterModule.forChild(routes)],
