--- a/coverage.html
+++ b/coverage.html
@@ -107,21 +107,21 @@
             </td>
             <td>injectable</td>
             <td>AuthService</td>
-            <td align="right" data-sort="64">
-                <span class="coverage-percent">64 %</span>
-                <span class="coverage-count">(11/17)</span>
+            <td align="right" data-sort="61">
+                <span class="coverage-percent">61 %</span>
+                <span class="coverage-count">(13/21)</span>
             </td>
         </tr>
-        <tr class="very-good">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#API_URL">src/app/auth/auth.service.ts</a>
+                <a href="./components/VerifyEmailComponent.html">src/app/auth/email/verify-email/verify-email.component.ts</a>
             </td>
-            <td>variable</td>
-            <td>API_URL</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
+            <td>component</td>
+            <td>VerifyEmailComponent</td>
+            <td align="right" data-sort="37">
+                <span class="coverage-percent">37 %</span>
+                <span class="coverage-count">(3/8)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -131,9 +131,9 @@
             </td>
             <td>component</td>
             <td>LoginComponent</td>
-            <td align="right" data-sort="41">
-                <span class="coverage-percent">41 %</span>
-                <span class="coverage-count">(5/12)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(4/8)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -155,21 +155,33 @@
             </td>
             <td>component</td>
             <td>SignupComponent</td>
-            <td align="right" data-sort="46">
-                <span class="coverage-percent">46 %</span>
-                <span class="coverage-count">(7/15)</span>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(6/12)</span>
             </td>
         </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./interfaces/User.html">src/app/auth/user.model.ts</a>
+                <a href="./interfaces/IUser.html">src/app/auth/user.model.ts</a>
             </td>
             <td>interface</td>
-            <td>User</td>
-            <td align="right" data-sort="20">
-                <span class="coverage-percent">20 %</span>
-                <span class="coverage-count">(1/5)</span>
+            <td>IUser</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/UserService.html">src/app/auth/user.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>UserService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="medium">
