--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -63,6 +63,9 @@
                         <li>
                             <a href="#TaskResponseType" title="src/app/board/tasks/task-http.service.ts"><b>TaskResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../task-http.service.ts)</a>
                         </li>
+                        <li>
+                            <a href="#UserResponseType" title="src/app/auth/auth.service.ts"><b>UserResponseType</b>&nbsp;&nbsp;&nbsp;(src/.../auth.service.ts)</a>
+                        </li>
                     </ul>
                 </td>
             </tr>
@@ -94,6 +97,24 @@
                 <td class="col-md-4">
                     <a name="TaskResponseType"></a>
                     <span class="name"><b>TaskResponseType</b><a href="#TaskResponseType"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <code>    <code>HttpResponse&lt;literal type&gt;</code>
+</code>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>    <h3>src/app/auth/auth.service.ts</h3>
+    <section>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="UserResponseType"></a>
+                    <span class="name"><b>UserResponseType</b><a href="#UserResponseType"><span class="icon ion-ios-link"></span></a></span>
                 </td>
             </tr>
             <tr>
